[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.9"
prost = "0.11.9"
tokio = { version = "1.31.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.9.2"
tonic-web = "0.9.2"
tower-http = { version = "0.4.3", features = ["cors"] }

[build-dependencies]
tonic-build = "0.9.2"
